[package]
name = "rustbrokercli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.107"
futures = "0.3.29"
tokio-tungstenite = "0.15"  # Use a version that is compatible with Tokio 1.x
warp = "0.3"
tungstenite = "0.14.0"
url = "2.4.1"

